<resources>
    <string name="activity_splash">Splash Activity</string>
    <string name="add">Aggiungi</string>
    <string name="add_ingredient_to_search">addIngredientOnSearch</string>
    <string name="add_step">Aggiungi Step</string>
    <string name="already_anonymous">Sei già in modalità ospite</string>
    <string name="anonymous">Questa funzione non è disponibile in modalità ospite!</string>
    <string name="app_name">Cooking Bay</string>
    <string name="author">Autore</string>
    <string name="change_password">Cambia password</string>
    <string name="comment_content">CommentContent</string>
    <string name="comments">Commenti</string>
    <string name="del_ingredient_from_search">delIngredientOnSearch</string>
    <string name="delete">Elimina</string>
    <string name="delete_account">Elimina account</string>
    <string name="delete_comment">Commento eliminato</string>
    <string name="delete_confirmation">Sei sicuro di voler eliminare la ricetta?</string>
    <string name="delete_error">Errore nell\'eliminazione!</string>
    <string name="delete_step">Elimina Step</string>
    <string name="describe_step">Descrivi questo step</string>
    <string name="dessert">Dessert</string>
    <string name="dish">Pietanza</string>
    <string name="dish_type">tipo_pietanza</string>
    <string name="dislike">dislike</string>
    <string name="done_editing">Ricetta modificata!</string>
    <string name="done_sharing">Ricetta Condivisa!</string>
    <string name="done_uploading">Upload completato!</string>
    <string name="dont_have_an_account">Non possiedi un account?</string>
    <string name="drink">Bevanda</string>
    <string name="dropdown">Dropdown</string>
    <string name="edit">Modifica</string>
    <string name="edit_password">Modifica Password</string>
    <string name="edit_username">Modifica Nome Utente</string>
    <string name="else_string">Oppure</string>
    <string name="email">Email</string>
    <string name="email_sent">Abbiamo inviato una e-mail per reimpostare la password</string>
    <string name="error_signup">Errore</string>
    <string name="exit">Esci</string>
    <string name="exit_error">Impossibile accedere come ospite</string>
    <string name="exit_no_save">Esci senza salvare</string>
    <string name="favourite">Aggiungi ai preferiti</string>
    <string name="first_course">Primo</string>
    <string name="general_info">Informazioni generali</string>
    <string name="have_an_account">Possiedi già un account?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hours"> h</string>
    <string name="imgrecipe">immagine ricetta</string>
    <string name="imgstep">imgstep</string>
    <string name="ing_required">Perfavore inserisci il nome e la quantità dell\'ingrediente</string>
    <string name="ingredient">Ingrediente</string>
    <string name="ingredients">Ingredienti</string>
    <string name="insert_comment">Inserisci commento</string>
    <string name="insert_email">Perfavore inserisci l\'e-mail del tuo account</string>
    <string name="insert_text_search">Inserisci il testo da cercare</string>
    <string name="insert_title">Inserisci il titolo</string>
    <string name="like">like</string>
    <string name="like_dislike_anonymous">Non puoi votare in modalità ospite</string>
    <string name="logged_as_anonymous">Sei ora connesso come ospite</string>
    <string name="login">Accedi</string>
    <string name="login_as_guest">Accedi come ospite</string>
    <string name="mandatory">*</string>
    <string name="menuExit" />
    <string name="menuFile" />
    <string name="method">Procedimento</string>
    <string name="min">Min</string>
    <string name="minimum_info_required">Informazioni obbligatorie o immagine di anteprima mancanti!</string>
    <string name="minutes"> m</string>
    <string name="new_password">Inserisci nuova password</string>
    <string name="new_password_confirm">Conferma nuova password</string>
    <string name="no_recipe">La ricerca non ha apportato nessun risultato</string>
    <string name="old_password"> Inserisci vecchia password </string>
    <string name="password">Password</string>
    <string name="password_forgot">Non ricordi più la password?</string>
    <string name="cancel">Annulla</string>
    <string name="password_conf">Le nuove password non coincidono!</string>
    <string name="password_confirm">Conferma</string>
    <string name="password_done">Password cambiata correttamente</string>
    <string name="password_length">La password deve avere un minimo di 6 caratteri!</string>
    <string name="password_old_required">Inserisci la tua vecchia password!</string>
    <string name="password_required">Inserisci la password!</string>
    <string name="password_wrong">Password errata!</string>
    <string name="preview_pic">imganteprima</string>
    <string name="profilePic">profilePic</string>
    <string name="profilepic">profilePic</string>
    <string name="profilepic_anonymous">Non puoi caricare una foto profilo in modalità ospite</string>
    <string name="publish">Pubblica</string>
    <string name="quantity">QTA</string>
    <string name="reauthenticate">Riautenticati per eliminare l\'account</string>
    <string name="recipe">Ricetta</string>
    <string name="recipe_deleted">Ricetta eliminata</string>
    <string name="recipe_not_saved">Ricetta non salvata</string>
    <string name="required">Inserire tutte le informazioni!</string>
    <string name="reset_password">REIMPOSTA</string>
    <string name="sandwich">Panino</string>
    <string name="save_publish">Salva e pubblica</string>
    <string name="save_username">saveusername</string>
    <string name="search">Cerca</string>
    <string name="search_by_ingredients">Ricerca per ingredienti</string>
    <string name="search_by_text_not_possible">La ricerca tramite testo non è disponibile</string>
    <string name="search_by_time">Tempo di preparazione \u003C </string>
    <string name="second_course">Secondo</string>
    <string name="section">Section</string>
    <string name="set_timer">Imposta un timer</string>
    <string name="share_comment">Pubblica commento</string>
    <string name="side_dish">Contorno</string>
    <string name="signup">Registrati</string>
    <string name="sorgente">Seleziona la sorgente</string>
    <string name="starter">Antipasto</string>
    <string name="step">Step</string>
    <string name="step_n">Step N</string>
    <string name="string_undo" />
    <string name="switch_account">Cambia account</string>
    <string name="time">Tempo</string>
    <string name="timer">Avvia timer</string>
    <string name="timer_launched">Timer avviato</string>
    <string name="title">Titolo</string>
    <string name="title_not_editable">Il titolo non può essere modificato!</string>
    <string name="too_many_ing">Non puoi inserire più di 10 ingredienti!</string>
    <string name="type">Tipologia</string>
    <string name="undo">undousername</string>
    <string name="uploading">Attendi l\'upload delle immagini</string>
    <string name="user">Utente</string>
    <string name="user_anonymous">Ospite</string>
    <string name="user_deleted">Utente eliminato</string>
    <string name="user_modify">Modifica nome utente</string>
    <string name="username">Username</string>
    <string name="username_anonymous">Non puoi cambiare il nome utente in modalità ospite!</string>
    <string name="zero">0</string>
</resources>
