<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/commentProfilePic"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/profilepic"
            android:scaleType="centerCrop"
            android:src="@drawable/missingprofile" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <ImageView
                    android:id="@+id/deleteComment"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_delete_forever_black_24dp"
                    android:tint="@color/likeDislikeNotClicked"
                    android:contentDescription="@string/delete_comment" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <TextView
                    android:id="@+id/commentUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username" />

                <TextView
                    android:id="@+id/commentText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/comment_content"
                    android:textColor="@android:color/black" />

            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray" />
</LinearLayout>