<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/my_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardElevation="12dp"
    app:cardPreventCornerOverlap="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/myCardPreviewPic"
            android:layout_width="match_parent"
            android:layout_height="194dp"
            android:contentDescription="@string/imgrecipe"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/myCardRecipeTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/title"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textColor="@color/primaryText" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/modifyrecipe"
                        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:text="@string/edit"
                        android:textColor="@color/colorAccent"
                        app:icon="@drawable/ic_mode_edit_black_24dp"
                        app:iconTint="@color/colorAccent" />

                    <Button
                        android:id="@+id/deleterecipe"
                        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:text="@string/delete"
                        android:textColor="@color/colorAccent"
                        app:icon="@drawable/ic_delete_forever_black_24dp"
                        app:iconTint="@color/colorAccent" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end|center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="end"
                        android:layout_marginEnd="5dp"
                        android:contentDescription="@string/dish"
                        android:src="@drawable/ic_restaurant_black_24dp" />

                    <TextView
                        android:id="@+id/myCardRecipeType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dish"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="end"
                        android:layout_marginEnd="5dp"
                        android:contentDescription="@string/time"
                        android:src="@drawable/ic_av_timer_black_24dp" />

                    <TextView
                        android:id="@+id/myCardRecipeTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>